<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Item_Search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/Item_ShowPokedex"
        android:title="@string/showPokedex"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Item_ShowTypes"
        android:title="@string/showType"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Item_ShowFavoritos"
        android:title="@string/showFavoritos"
        app:showAsAction="never"/>
</menu>